[package]
name = "ac_external_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "handleapi", "memoryapi", "processthreadsapi","errhandlingapi"]}
egui = "0.27.0"
eframe = { version = "0.27", features = ["default"] }